Removes wrapper from login.html. Changes #loginForm margin to padding to prevent collapsing margins.

--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -7,10 +7,13 @@
 @import 'partials/reset';
 @import 'partials/mixins';
 
+
 body {
   background-color: $main-background;
   font-family: $proxima-nova-stack;
   font-weight: $normal-weight;
+  position: relative;
+  min-height: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -31,6 +34,7 @@ a.active {
 }
 
 footer {
+  max-height: 80px;
   position: absolute;
   padding: 1rem;
   text-align: center;
