--- a/client/src/style/partials/_reset.scss
+++ b/client/src/style/partials/_reset.scss
@@ -87,6 +87,10 @@ table {
   border-spacing: 0px;
 }
 
+html {
+  height: 100%;
+}
+
 html, body {
   width: 100%;
   z-index: 0;
