--- a/client/src/style/public/_login.scss
+++ b/client/src/style/public/_login.scss
@@ -1,7 +1,7 @@
 
 #loginForm {
   
-  margin-top: 30vh;
+  padding-top: 30vh;
 
   header {
     margin-bottom: 2em;
